@@ -30,7 +30,6 @@
 
 #include "ecc.h"
 #include "ecc-internal.h"
-#include "gmp-glue.h"
 #include "nettle-internal.h"
 
 static int
